src/objects/S3_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>S3 Credentials</label>
</CustomObject>